--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,18 +1,17 @@
-          
-          <div class="news">
-            <h2>News</h2>
-            {% if site.news != blank -%} 
+          <div class="education">
+            <h2>Education</h2>
+            {% if site.education != blank -%} 
             <div class="table-responsive">
               <table class="table table-sm table-borderless">
-              {%- assign news = site.news | reverse -%} 
-              {% for item in news limit: site.news_limit %} 
+              {%- assign education = site.education | reverse -%} 
+              {% for item in education limit: site.education_limit %} 
                 <tr>
-                  <th scope="row">{{ item.date | date: "%b %-d, %Y" }}</th>
+                  <th scope="row">{{ item.start_end }}</th>
                   <td>
                     {% if item.inline -%} 
                       {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
                     {%- else -%} 
-                      <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
+                      <a class="education-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
                     {%- endif %} 
                   </td>
                 </tr>
@@ -20,6 +19,6 @@
               </table>
             </div>
           {%- else -%} 
-            <p>No news so far...</p>
+            <p>No education so far...</p>
           {%- endif %} 
           </div>
