--- a/_includes/honors.html
+++ b/_includes/honors.html
@@ -1,18 +1,16 @@
-          
-          <div class="news">
-            <h2>News</h2>
-            {% if site.news != blank -%} 
+          <div class="honors">
+            <h2>Honors and Awards</h2>
+            {% if site.honors != blank -%} 
             <div class="table-responsive">
               <table class="table table-sm table-borderless">
-              {%- assign news = site.news | reverse -%} 
-              {% for item in news limit: site.news_limit %} 
+              {%- assign honors = site.honors | reverse -%} 
+              {% for item in honors limit: site.honors_limit %} 
                 <tr>
-                  <th scope="row">{{ item.date | date: "%b %-d, %Y" }}</th>
                   <td>
                     {% if item.inline -%} 
                       {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
                     {%- else -%} 
-                      <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
+                      <a class="honors-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
                     {%- endif %} 
                   </td>
                 </tr>
@@ -20,6 +18,6 @@
               </table>
             </div>
           {%- else -%} 
-            <p>No news so far...</p>
+            <p>No honors so far...</p>
           {%- endif %} 
           </div>
