--- a/_includes/projects_horizontal.html
+++ b/_includes/projects_horizontal.html
@@ -8,7 +8,10 @@
       <div class="row g-0">
         {%- if project.img -%}
         <div class="card-img col-md-6">
-          {% include figure.html path=project.img alt="project thumbnail" %}
+          {% responsive_image_block %}
+            path: {{ project.img }}
+            alt: "project thumbnail"
+          {% endresponsive_image_block %}
         </div>
         <div class="col-md-6">
         {%- else -%}
@@ -21,11 +24,11 @@
               {%- if project.github -%}
               <div class="github-icon">
                 <div class="icon" data-toggle="tooltip" title="Code Repository">
-                  <a href="{{ project.github }}"><i class="fa-brands fa-github gh-icon"></i></a>
+                  <a href="{{ project.github }}"><i class="fab fa-github gh-icon"></i></a>
                 </div>
                 {%- if project.github_stars -%}
                 <span class="stars" data-toggle="tooltip" title="GitHub Stars">
-                  <i class="fa-solid fa-star"></i>
+                  <i class="fas fa-star"></i>
                   <span id="{{ project.github_stars }}-stars"></span>
                 </span>
                 {%- endif -%}
