--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -4,18 +4,10 @@
   <head>
     {%- include head.html %}
 
-    {%- if site.enable_medium_zoom %}
-      <!-- Medium Zoom JS -->
-      <script defer src="https://cdn.jsdelivr.net/npm/medium-zoom@{{ site.medium_zoom.version }}/dist/medium-zoom.min.js" integrity="{{ site.medium_zoom.integrity }}" crossorigin="anonymous"></script>
-      <script defer src="{{ '/assets/js/zoom.js' | relative_url | bust_file_cache }}"></script>
-    {%- endif -%}
-
-    {% include scripts/jquery.html %}
     {% include scripts/mathjax.html %}
     <!-- Distill js -->
     <script src="{{ '/assets/js/distillpub/template.v2.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/distillpub/transforms.v2.js' | relative_url }}"></script>
-    <script src="{{ '/assets/js/distillpub/overrides.js' | relative_url }}"></script>
     {% if page._styles %}
     <!-- Page/Post style -->
     <style type="text/css">
@@ -72,9 +64,8 @@
         <h1>{{ page.title }}</h1>
         <p>{{ page.description }}</p>
       </d-title>
-      {%- if page.authors -%}
+
       <d-byline></d-byline>
-      {%- endif -%}
 
       <d-article>
         {% if page.toc -%}
@@ -103,22 +94,18 @@
         <d-citation-list></d-citation-list>
       </d-appendix>
 
-      <d-bibliography src="{{ page.bibliography | prepend: '/assets/bibliography/' | relative_url }}"></d-bibliography>
-
-      {%- if site.disqus_shortname and page.disqus_comments -%}
-        {% include disqus.html %}
-      {%- endif %}
-      {%- if site.giscus.repo and page.giscus_comments -%}
-        {% include giscus.html %}
-      {%- endif -%}
-
     </div>
 
     <!-- Footer -->
     {%- include footer.html %}
 
-    {% include scripts/bootstrap.html %}
-    {% include scripts/analytics.html %}
-    {% include scripts/progressBar.html %}
   </body>
+
+  <d-bibliography src="{{ page.bibliography | prepend: '/assets/bibliography/' | relative_url }}">
+  </d-bibliography>
+
+  {% include scripts/jquery.html %}
+  {% include scripts/bootstrap.html %}
+  <script src="{{ '/assets/js/distillpub/overrides.js' | relative_url }}"></script>
+
 </html>
