--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
                 
               <!-- CV -->
               <li class="nav-item">
-                <a class="nav-link" href="/assets/Resume.pdf" target="_blank"  rel="noopener noreferrer" class="float-right">Curriculum Vitae</a>
+                <a class="nav-link" href="/assets/CV_Hunmin_Yang.pdf" target="_blank"  rel="noopener noreferrer" class="float-right">Curriculum Vitae</a>
               </li>
                 
               <!-- Other pages -->
