--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -728,10 +728,11 @@ footer.sticky-bottom {
           color: var(--global-text-color);
           border: 1px solid var(--global-text-color);
           padding-left: 1rem;
-          padding-right: 5rem;
+          padding-right: 1rem;
           padding-top: 0.25rem;
           padding-bottom: 0.25rem;
           margin-left: 0;
+          margin-right: 5rem;
 
           &:hover {
             color: var(--global-theme-color);
